--- a/src/components/ui/ProductCard.css
+++ b/src/components/ui/ProductCard.css
@@ -13,8 +13,8 @@
 }
 
 .product-card .product-image-container {
-  height: 216px;
-  width: 164px;
+  width: 100%;
+  aspect-ratio: 1/1.3;
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -28,14 +28,14 @@
 }
 
 .product-card .product-image {
-  height: 216px;
-  width: 164px;
+  height: 100%;
   object-fit: cover;
+  object-position: center;
   position: relative;
-  padding: 0;
+  padding-top: 4;
   margin: 0;
-  /* 修改阴影效果，确保正确应用 */
-  box-shadow: 0px 0px 4px 4px rgba(0, 123, 255, 0.3);
+  /* 修改阴影效果，确保正确应用 
+  box-shadow: 0px 0px 4px 4px rgba(0, 123, 255, 0.3);*/
 }
 
 /* 添加Telegram主题支持 */
@@ -57,8 +57,6 @@
 }
 
 .product-card .product-name {
-  -webkit-box-orient: vertical;
-  -webkit-line-clamp: 1;
   align-self: stretch;
   color: #212121;
   display: -webkit-box;
@@ -69,11 +67,18 @@
   height: 20px;
   letter-spacing: var(--body-15pt-regular-letter-spacing);
   line-height: var(--body-15pt-regular-line-height);
-  margin-top: 0;
-  overflow: hidden;
   position: relative;
-  text-overflow: ellipsis;
   white-space: nowrap;
+  
+  line-height: 1.3;
+  margin: 0 0 4px 0;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-break: break-word;
+  min-height: calc(1.3em * 2); /* 确保至少两行的高度 */
 }
 
 .product-card .product-price {
